--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
     <string name="app_name">MagicCardsApi</string>
-    <string name="action_settings">Settings</string>
+    <string name="action_settings_refresh">Refresh</string>
 </resources>
