Al elegir la opción "Refresh" se bajan 100 cartas del api y se muestran sus nombres en el listado

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
     <string name="app_name">MagicCardsApi</string>
-    <string name="action_settings_refresh">Refresh</string>
+    <string name="action_settings">Refresh</string>
 </resources>
