--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,34 @@
 <resources>
     <string name="app_name">Magic Cards AwsomeApi</string>
-    <string name="action_settings">Refresh</string>
+    <string name="action_refresh">Refresh</string>
     <string name="title_activity_settings">Settings</string>
+    <string name="rarity">Rarity</string>
+    <string name="color">Color</string>
+    <string-array name="rarity_cards">
+        <item>Basic Land</item>
+        <item>Common</item>
+        <item>Uncommon</item>
+        <item>Rare</item>
+        <item>Mythic Rare</item>
+        <item>Special</item>
+    </string-array>
+
+    <string-array name="http_rarity_cards">
+        <item>basic_land</item>
+        <item>common</item>
+        <item>uncommon</item>
+        <item>rare</item>
+        <item>mythic_rare</item>
+        <item>special</item>
+    </string-array>
+
+    <string-array name="color_cards">
+        <item>Black</item>
+        <item>White</item>
+        <item>Red</item>
+        <item>Blue</item>
+        <item>Green</item>
+    </string-array>
 
     <!-- Strings related to Settings -->
 
@@ -13,8 +40,8 @@
         based on your message history
     </string>
 
-    <string name="pref_title_display_name">Display name</string>
-    <string name="pref_default_display_name">John Smith</string>
+    <string name="pref_title_display_color">Display color</string>
+    <string name="pref_default_display_color">Red</string>
 
     <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
     <string-array name="pref_example_list_titles">
@@ -74,4 +101,10 @@
     <string name="pref_ringtone_silent">Silent</string>
 
     <string name="pref_title_vibrate">Vibrate</string>
+    <string name="pref_header_filter">Filter</string>
+
+    <string name="multi_select_list_preference">Multi select list preference</string>
+
+
+
 </resources>
