-Card Detail (activity and fragment)

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -105,7 +105,9 @@
     <!-- Example settings for Notifications -->
     <string name="pref_header_notifications">Notifications</string>
     <string name="pref_title_new_message_notifications">New message notifications</string>
+    <string name="action_settings">Settings</string>
 
-
+    <!-- Detail Activity -->
+    <string name="title_activity_detail">DetailActivity</string>
 
 </resources>
